--- a/inputs/templates/json.j2
+++ b/inputs/templates/json.j2
@@ -1,5 +1,5 @@
 {
-    "os": {{os}},
+    "os": "{{os}}",
     "version": {{version}},
-    "installed_apps": {{installed_apps}}
+    "installed_apps": "{{installed_apps}}"
 }
